# jsonresolver

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  hookspec.py  jsonref_pluggy.py  jsonref_pluggy_record.py  jsonref_pluggy_test.py  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
examples/: app.py
jsonresolver/: __init__.py  core.py  decorators.py  hookimpl.py  hookspec.py  version.py
jsonresolver/contrib/: __init__.py  jsonref.py  jsonschema.py
tests/: conftest.py  setup.py  test_core.py  test_jsonref.py  test_jsonschema.py
tests/demo/: __init__.py  hosts.py  internals.py  raising.py  raising_hook.py  schema.py  simple.py
