# -*- coding: utf-8 -*-
#
# This file is part of JSONResolver.
# Copyright (C) 2015, 2016 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# JSONResolver is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# JSONResolver is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with JSONResolver; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[metadata]
name = jsonresolver
version = attr: jsonresolver.__version__
description = JSON data resolver with support for plugins.
long_description = file: README.rst, CHANGES.rst
keywords =
license = BSD
author = Invenio collaboration
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/jsonresolver
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    pluggy>=0.10.0,<1.0
    werkzeug>=1.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    mock>=1.3.0
    pytest-cache>=1.0
    requests>=2.7.0
    pytest-invenio>=2.0.0,<3.0.0
    sphinx>=4.5
    jsonref>=1.0.0
    jsonschema>=2.5.1
# Kept for backwards compatibility
docs =
jsonref =
    jsonref>=1.0.0
jsonschema =
    jsonschema>=2.5.1

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = jsonresolver/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = jsonresolver/translations/messages.pot

[init_catalog]
input-file = jsonresolver/translations/messages.pot
output-dir = jsonresolver/translations/

[update_catalog]
input-file = jsonresolver/translations/messages.pot
output-dir = jsonresolver/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt
    tests/build/lib/demo/*
    tests/dist/*

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=jsonresolver --cov-report=term-missing
testpaths = tests jsonresolver
